fixing lessons page, too narrow

--- a/styles/pages/About/about.scss
+++ b/styles/pages/About/about.scss
@@ -1,17 +1,64 @@
-.ourVisionImgContainer{
-    width: 60vw;
-    height: 300px;
-    @media(max-width: 767px){
-        width: 100vw;
-    }
+$aboutHeroColor: rgb(45, 131, 195);
+$txtShadow: 0px 0px 4px #470d29;
 
-    @media(max-width: 575px){
-        height: 150px;
-    }
+.ourVisionImgContainer {
+  width: 60vw;
+  height: 300px;
+  @media (max-width: 767px) {
+    width: 100vw;
+  }
+
+  @media (max-width: 575px) {
+    height: 150px;
+  }
 }
 
-.linkHover:hover{
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    z-index: 20;
-    transition-duration: .3s;
+.linkHover:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  z-index: 20;
+  transition-duration: 0.3s;
+}
+
+.about-hero {
+  background-color: $aboutHeroColor;
+  height: 550px;
+
+  @media(max-width: 575px){
+    height: 480px;
+  }
+
+  > div:last-child {
+    color: white;
+    text-shadow: $txtShadow;
+    display: flex;
+    justify-content: center;
+    > div {
+      width: 75%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      @media(min-width: 992px){
+        padding-bottom: 120px;
+      }
+
+      > p {
+        @media (max-width: 575px) {
+          line-height: 20px;
+        }
+      }
+    }
+  }
+
+  > div:first-child {
+    img {
+      @media (max-width: 575px) {
+        max-width: 270px;
+        top: 50% !important;
+        left: 50% !important;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
 }
